perf: 全面优化代码结构