@@ -4,7 +4,6 @@ import top.xcyyds.chineserpg.martialart.skill.MartialArt;
 import top.xcyyds.chineserpg.registry.MartialArtRegistry;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class MartialArts {
 
@@ -18,14 +17,14 @@ public class MartialArts {
     public static MartialArt getRandomLightSkill() {
         List<MartialArt> lightSkills = MartialArtRegistry.getMartialArts().stream()
                 .filter(martialArt -> "轻功".equals(martialArt.getType()))
-                .collect(Collectors.toList());
+                .toList();
         return lightSkills.isEmpty() ? null : lightSkills.get((int) (Math.random() * lightSkills.size()));
     }
 
     public static MartialArt getRandomOuterSkill() {
         List<MartialArt> outerSkills = MartialArtRegistry.getMartialArts().stream()
                 .filter(martialArt -> "外功".equals(martialArt.getType()))
-                .collect(Collectors.toList());
+                .toList();
         return outerSkills.isEmpty() ? null : outerSkills.get((int) (Math.random() * outerSkills.size()));
     }
 }
